Added Visual Studio solution to build on Windows - no libs or headers though

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,14 @@
 *.la
 *.a
 
-# Confirmed Crit specific stuff
+# Visual Studio stuff
+*.user
+*.suo
+Debug
+Release
+
+# Project config stuff
 out
 bin
-build
 .rbenv*
 *.swp
